examples/test/testpolicy9727.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9727
  namespace: namespace126
spec:
  podSelector:
    matchLabels:
      key4: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value30
          key14: value2
      podSelector:
        matchLabels:
          key34: value7
          key30: value19
